<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/customBottomSheetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_custom_bottom_sheet"/>

    <Button
        android:id="@+id/confirmationBottomSheetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_confirmation_bottom_sheet"/>

    <Button
        android:id="@+id/actionsBottomSheetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_actions_bottom_sheet"/>

    <Button
        android:id="@+id/customActionsBottomSheetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_custom_actions_bottom_sheet"/>

    <Button
        android:id="@+id/actionsBottomSheet2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_actions_bottom_sheet2"/>

    <Button
        android:id="@+id/customActionsBottomSheet2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_title_custom_actions_bottom_sheet2"/>

</LinearLayout>